// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`furet-ui-list-view component Render with data 1 1`] = `
<div data-server-rendered="true">
    <nav class="level">
        <div class="level-left">
            <div class="field has-addons">
                <p class="control"><a class="button"><span class="icon is-small"><i class="fa fa-plus"></i></span> <span>Create</span></a></p>
                <!---->
                <!---->
                <!---->
            </div>
        </div>
        <div class="level-right">
            <!---->
        </div>
    </nav>
    <div class="b-table">
        <!---->
        <div class="table-wrapper">
            <table class="table is-narrow has-mobile-cards">
                <thead>
                    <tr>
                        <th class="checkbox-cell"><label tabindex="0" class="checkbox"><input type="checkbox" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label"></span></label></th>
                    </tr>
                </thead>
                <tbody>
                    <tr class="is-empty">
                        <td colspan="1"></td>
                    </tr>
                </tbody>
            </table>
        </div>
        <div class="level">
            <div class="level-left">
                <!---->
            </div>
            <div class="level-right">
                <div class="level-item">
                    <div class="pagination"><a class="pagination-previous is-disabled"><span class="icon"><i class="fa fa-angle-left"></i></span></a> <a class="pagination-next is-disabled"><span class="icon"><i class="fa fa-angle-right"></i></span></a>
                        <ul class="pagination-list">
                            <!---->
                            <!---->
                            <!---->
                            <!---->
                        </ul>
                        <!---->
                    </div>
                </div>
            </div>
        </div>
    </div>
</div>
`;

exports[`furet-ui-list-view component Render with data 2 1`] = `
<div data-server-rendered="true">
    <nav class="level">
        <div class="level-left">
            <div class="field has-addons">
                <p class="control"><a class="button"><span class="icon is-small"><i class="fa fa-plus"></i></span> <span>Create</span></a></p>
                <!---->
                <!---->
                <!---->
            </div>
        </div>
        <div class="level-right">
            <!---->
        </div>
    </nav>
    <div class="b-table">
        <!---->
        <div class="table-wrapper">
            <table class="table is-narrow has-mobile-cards">
                <thead>
                    <tr>
                        <th class="checkbox-cell"><label tabindex="0" class="checkbox"><input type="checkbox" true-value="true"> <span class="check"></span> <span class="control-label"></span></label></th>
                    </tr>
                </thead>
                <tbody>
                    <tr>
                        <td class="checkbox-cell"><label tabindex="0" class="checkbox"><input type="checkbox" true-value="true"> <span class="check"></span> <span class="control-label"></span></label></td>
                        <td data-label="ID" class="has-text-right"><span><span>1</span></span>
                        </td>
                        <td data-label="Label"><span><span>Label 1</span></span>
                        </td>
                        <td data-label="Boolean"><span><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label"></span></label>
                            </span>
                        </td>
                        <td data-label="State"><span><span>New</span></span>
                        </td>
                    </tr>
                    <tr>
                        <td class="checkbox-cell"><label tabindex="0" class="checkbox"><input type="checkbox" true-value="true"> <span class="check"></span> <span class="control-label"></span></label></td>
                        <td data-label="ID" class="has-text-right"><span><span>2</span></span>
                        </td>
                        <td data-label="Label"><span><span>Label 2</span></span>
                        </td>
                        <td data-label="Boolean"><span><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label"></span></label>
                            </span>
                        </td>
                        <td data-label="State"><span><span>New</span></span>
                        </td>
                    </tr>
                    <tr>
                        <td class="checkbox-cell"><label tabindex="0" class="checkbox"><input type="checkbox" true-value="true"> <span class="check"></span> <span class="control-label"></span></label></td>
                        <td data-label="ID" class="has-text-right"><span><span>3</span></span>
                        </td>
                        <td data-label="Label"><span><span>Label 3</span></span>
                        </td>
                        <td data-label="Boolean"><span><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label"></span></label>
                            </span>
                        </td>
                        <td data-label="State"><span><span>New</span></span>
                        </td>
                    </tr>
                    <tr>
                        <td class="checkbox-cell"><label tabindex="0" class="checkbox"><input type="checkbox" true-value="true"> <span class="check"></span> <span class="control-label"></span></label></td>
                        <td data-label="ID" class="has-text-right"><span><span>4</span></span>
                        </td>
                        <td data-label="Label"><span><span>Label 4</span></span>
                        </td>
                        <td data-label="Boolean"><span><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label"></span></label>
                            </span>
                        </td>
                        <td data-label="State"><span><span>New</span></span>
                        </td>
                    </tr>
                </tbody>
            </table>
        </div>
        <div class="level">
            <div class="level-left">
                <!---->
            </div>
            <div class="level-right">
                <div class="level-item">
                    <div class="pagination"><a class="pagination-previous is-disabled"><span class="icon"><i class="fa fa-angle-left"></i></span></a> <a class="pagination-next is-disabled"><span class="icon"><i class="fa fa-angle-right"></i></span></a>
                        <ul class="pagination-list">
                            <!---->
                            <!---->
                            <li><a class="pagination-link is-current">
                1
            </a></li>
                            <!---->
                            <!---->
                        </ul>
                        <!---->
                    </div>
                </div>
            </div>
        </div>
    </div>
</div>
`;

exports[`furet-ui-list-view component Render with data 3 1`] = `
<div data-server-rendered="true">
    <nav class="level">
        <div class="level-left">
            <div class="field has-addons">
                <p class="control"><a class="button"><span class="icon is-small"><i class="fa fa-plus"></i></span> <span>Create</span></a></p>
                <!---->
                <!---->
                <!---->
            </div>
        </div>
        <div class="level-right">
            <!---->
        </div>
    </nav>
    <div class="b-table">
        <!---->
        <div class="table-wrapper">
            <table class="table is-narrow has-mobile-cards">
                <thead>
                    <tr>
                        <th class="checkbox-cell"><label tabindex="0" class="checkbox"><input type="checkbox" true-value="true"> <span class="check"></span> <span class="control-label"></span></label></th>
                    </tr>
                </thead>
                <tbody>
                    <tr>
                        <td class="checkbox-cell"><label tabindex="0" class="checkbox"><input type="checkbox" true-value="true"> <span class="check"></span> <span class="control-label"></span></label></td>
                        <td data-label="ID" class="has-text-right"><span><span>1</span></span>
                        </td>
                        <td data-label="Label"><span><span>Label 1 bis</span></span>
                        </td>
                        <td data-label="Boolean"><span><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true"> <span class="check"></span> <span class="control-label"></span></label>
                            </span>
                        </td>
                        <td data-label="State"><span><span>New</span></span>
                        </td>
                    </tr>
                    <tr>
                        <td class="checkbox-cell"><label tabindex="0" class="checkbox"><input type="checkbox" true-value="true"> <span class="check"></span> <span class="control-label"></span></label></td>
                        <td data-label="ID" class="has-text-right"><span><span>2</span></span>
                        </td>
                        <td data-label="Label"><span><span>Label 2</span></span>
                        </td>
                        <td data-label="Boolean"><span><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label"></span></label>
                            </span>
                        </td>
                        <td data-label="State"><span><span>New</span></span>
                        </td>
                    </tr>
                    <tr>
                        <td class="checkbox-cell"><label tabindex="0" class="checkbox"><input type="checkbox" true-value="true"> <span class="check"></span> <span class="control-label"></span></label></td>
                        <td data-label="ID" class="has-text-right"><span><span>3</span></span>
                        </td>
                        <td data-label="Label"><span><span>Label 3</span></span>
                        </td>
                        <td data-label="Boolean"><span><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label"></span></label>
                            </span>
                        </td>
                        <td data-label="State"><span><span>New</span></span>
                        </td>
                    </tr>
                    <tr>
                        <td class="checkbox-cell"><label tabindex="0" class="checkbox"><input type="checkbox" true-value="true"> <span class="check"></span> <span class="control-label"></span></label></td>
                        <td data-label="ID" class="has-text-right"><span><span>4</span></span>
                        </td>
                        <td data-label="Label"><span><span>Label 4</span></span>
                        </td>
                        <td data-label="Boolean"><span><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label"></span></label>
                            </span>
                        </td>
                        <td data-label="State"><span><span>New</span></span>
                        </td>
                    </tr>
                </tbody>
            </table>
        </div>
        <div class="level">
            <div class="level-left">
                <!---->
            </div>
            <div class="level-right">
                <div class="level-item">
                    <div class="pagination"><a class="pagination-previous is-disabled"><span class="icon"><i class="fa fa-angle-left"></i></span></a> <a class="pagination-next is-disabled"><span class="icon"><i class="fa fa-angle-right"></i></span></a>
                        <ul class="pagination-list">
                            <!---->
                            <!---->
                            <li><a class="pagination-link is-current">
                1
            </a></li>
                            <!---->
                            <!---->
                        </ul>
                        <!---->
                    </div>
                </div>
            </div>
        </div>
    </div>
</div>
`;

exports[`furet-ui-list-view component Render without data 1`] = `
<div data-server-rendered="true">
    <nav class="level">
        <div class="level-left">
            <div class="field has-addons">
                <!---->
                <!---->
                <!---->
                <!---->
            </div>
        </div>
        <div class="level-right">
            <!---->
        </div>
    </nav>
    <div class="b-table">
        <!---->
        <div class="table-wrapper">
            <table class="table is-narrow has-mobile-cards">
                <thead>
                    <tr>
                        <!---->
                    </tr>
                </thead>
                <tbody>
                    <tr class="is-empty">
                        <td colspan="0"></td>
                    </tr>
                </tbody>
            </table>
        </div>
        <div class="level">
            <div class="level-left">
                <!---->
            </div>
            <div class="level-right">
                <div class="level-item">
                    <div class="pagination"><a class="pagination-previous is-disabled"><span class="icon"><i class="fa fa-angle-left"></i></span></a> <a class="pagination-next is-disabled"><span class="icon"><i class="fa fa-angle-right"></i></span></a>
                        <ul class="pagination-list">
                            <!---->
                            <!---->
                            <!---->
                            <!---->
                        </ul>
                        <!---->
                    </div>
                </div>
            </div>
        </div>
    </div>
</div>
`;

exports[`furet-ui-x2m-list-view component Render with data 1 1`] = `
<div data-server-rendered="true">
    <nav class="level">
        <div class="level-left">
            <div class="field has-addons">
                <p class="control"><a class="button"><span class="icon is-small"><i class="fa fa-plus"></i></span> <span>Create</span></a></p>
                <!---->
            </div>
        </div>
        <div class="level-right">
            <div class="field has-addons">
                <p class="control"><span class="tooltip is-info is-left is-medium"><a class="button"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
                <p class="control"><span class="tooltip is-info is-left is-medium"><a class="button"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
                <!---->
                <p class="control"><span class="tooltip is-info is-left is-medium"><a class="button"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
            </div>
        </div>
    </nav>
    <div class="b-table">
        <!---->
        <div class="table-wrapper">
            <table class="table is-narrow has-mobile-cards">
                <thead>
                    <tr>
                        <th class="checkbox-cell"><label tabindex="0" class="checkbox"><input type="checkbox" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label"></span></label></th>
                    </tr>
                </thead>
                <tbody>
                    <tr class="is-empty">
                        <td colspan="1"></td>
                    </tr>
                </tbody>
            </table>
        </div>
        <div class="level">
            <div class="level-left">
                <!---->
            </div>
            <div class="level-right">
                <div class="level-item">
                    <div class="pagination"><a class="pagination-previous is-disabled"><span class="icon"><i class="fa fa-angle-left"></i></span></a> <a class="pagination-next is-disabled"><span class="icon"><i class="fa fa-angle-right"></i></span></a>
                        <ul class="pagination-list">
                            <!---->
                            <!---->
                            <!---->
                            <!---->
                        </ul>
                        <!---->
                    </div>
                </div>
            </div>
        </div>
    </div>
</div>
`;

exports[`furet-ui-x2m-list-view component Render with data 2 1`] = `
<div data-server-rendered="true">
    <nav class="level">
        <div class="level-left">
            <div class="field has-addons">
                <p class="control"><a class="button"><span class="icon is-small"><i class="fa fa-plus"></i></span> <span>Create</span></a></p>
                <!---->
            </div>
        </div>
        <div class="level-right">
            <div class="field has-addons">
                <p class="control"><span class="tooltip is-info is-left is-medium"><a disabled="disabled" class="button is-primary"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
                <p class="control"><span class="tooltip is-info is-left is-medium"><a class="button"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
                <!---->
                <p class="control"><span class="tooltip is-info is-left is-medium"><a class="button"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
            </div>
        </div>
    </nav>
    <div class="b-table">
        <!---->
        <div class="table-wrapper">
            <table class="table is-narrow has-mobile-cards">
                <thead>
                    <tr>
                        <th class="checkbox-cell"><label tabindex="0" class="checkbox"><input type="checkbox" true-value="true"> <span class="check"></span> <span class="control-label"></span></label></th>
                    </tr>
                </thead>
                <tbody>
                    <tr>
                        <td class="checkbox-cell"><label tabindex="0" class="checkbox"><input type="checkbox" true-value="true"> <span class="check"></span> <span class="control-label"></span></label></td>
                        <td data-label="ID" class="has-text-right"><span><span>1</span></span>
                        </td>
                        <td data-label="Label"><span><span>Label 1</span></span>
                        </td>
                        <td data-label="Boolean"><span><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label"></span></label>
                            </span>
                        </td>
                        <td data-label="State"><span><span>New</span></span>
                        </td>
                    </tr>
                    <tr>
                        <td class="checkbox-cell"><label tabindex="0" class="checkbox"><input type="checkbox" true-value="true"> <span class="check"></span> <span class="control-label"></span></label></td>
                        <td data-label="ID" class="has-text-right"><span><span>2</span></span>
                        </td>
                        <td data-label="Label"><span><span>Label 2</span></span>
                        </td>
                        <td data-label="Boolean"><span><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label"></span></label>
                            </span>
                        </td>
                        <td data-label="State"><span><span>New</span></span>
                        </td>
                    </tr>
                    <tr>
                        <td class="checkbox-cell"><label tabindex="0" class="checkbox"><input type="checkbox" true-value="true"> <span class="check"></span> <span class="control-label"></span></label></td>
                        <td data-label="ID" class="has-text-right"><span><span>3</span></span>
                        </td>
                        <td data-label="Label"><span><span>Label 3</span></span>
                        </td>
                        <td data-label="Boolean"><span><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label"></span></label>
                            </span>
                        </td>
                        <td data-label="State"><span><span>New</span></span>
                        </td>
                    </tr>
                    <tr>
                        <td class="checkbox-cell"><label tabindex="0" class="checkbox"><input type="checkbox" true-value="true"> <span class="check"></span> <span class="control-label"></span></label></td>
                        <td data-label="ID" class="has-text-right"><span><span></span></span>
                        </td>
                        <td data-label="Label"><span><span></span></span>
                        </td>
                        <td data-label="Boolean"><span><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true"> <span class="check"></span> <span class="control-label"></span></label>
                            </span>
                        </td>
                        <td data-label="State"><span><span> --- </span></span>
                        </td>
                    </tr>
                </tbody>
            </table>
        </div>
        <div class="level">
            <div class="level-left">
                <!---->
            </div>
            <div class="level-right">
                <div class="level-item">
                    <div class="pagination"><a class="pagination-previous is-disabled"><span class="icon"><i class="fa fa-angle-left"></i></span></a> <a class="pagination-next is-disabled"><span class="icon"><i class="fa fa-angle-right"></i></span></a>
                        <ul class="pagination-list">
                            <!---->
                            <!---->
                            <li><a class="pagination-link is-current">
                1
            </a></li>
                            <!---->
                            <!---->
                        </ul>
                        <!---->
                    </div>
                </div>
            </div>
        </div>
    </div>
</div>
`;

exports[`furet-ui-x2m-list-view component Render with data 2 2`] = `
<div data-server-rendered="true">
    <nav class="level">
        <div class="level-left">
            <div class="field has-addons">
                <p class="control"><a class="button"><span class="icon is-small"><i class="fa fa-plus"></i></span> <span>Create</span></a></p>
                <!---->
            </div>
        </div>
        <div class="level-right">
            <div class="field has-addons">
                <p class="control"><span class="tooltip is-info is-left is-medium"><a disabled="disabled" class="button is-primary"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
                <p class="control"><span class="tooltip is-info is-left is-medium"><a class="button"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
                <!---->
                <p class="control"><span class="tooltip is-info is-left is-medium"><a class="button"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
            </div>
        </div>
    </nav>
    <div class="b-table">
        <!---->
        <div class="table-wrapper">
            <table class="table is-narrow has-mobile-cards">
                <thead>
                    <tr>
                        <th class="checkbox-cell"><label tabindex="0" class="checkbox"><input type="checkbox" true-value="true"> <span class="check"></span> <span class="control-label"></span></label></th>
                    </tr>
                </thead>
                <tbody>
                    <tr>
                        <td class="checkbox-cell"><label tabindex="0" class="checkbox"><input type="checkbox" true-value="true"> <span class="check"></span> <span class="control-label"></span></label></td>
                        <td data-label="ID" class="has-text-right"><span><span>1</span></span>
                        </td>
                        <td data-label="Label"><span><span>Label 1 bis</span></span>
                        </td>
                        <td data-label="Boolean"><span><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true"> <span class="check"></span> <span class="control-label"></span></label>
                            </span>
                        </td>
                        <td data-label="State"><span><span>New</span></span>
                        </td>
                    </tr>
                    <tr>
                        <td class="checkbox-cell"><label tabindex="0" class="checkbox"><input type="checkbox" true-value="true"> <span class="check"></span> <span class="control-label"></span></label></td>
                        <td data-label="ID" class="has-text-right"><span><span>2</span></span>
                        </td>
                        <td data-label="Label"><span><span>Label 2</span></span>
                        </td>
                        <td data-label="Boolean"><span><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label"></span></label>
                            </span>
                        </td>
                        <td data-label="State"><span><span>New</span></span>
                        </td>
                    </tr>
                    <tr>
                        <td class="checkbox-cell"><label tabindex="0" class="checkbox"><input type="checkbox" true-value="true"> <span class="check"></span> <span class="control-label"></span></label></td>
                        <td data-label="ID" class="has-text-right"><span><span>3</span></span>
                        </td>
                        <td data-label="Label"><span><span>Label 3</span></span>
                        </td>
                        <td data-label="Boolean"><span><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label"></span></label>
                            </span>
                        </td>
                        <td data-label="State"><span><span>New</span></span>
                        </td>
                    </tr>
                    <tr>
                        <td class="checkbox-cell"><label tabindex="0" class="checkbox"><input type="checkbox" true-value="true"> <span class="check"></span> <span class="control-label"></span></label></td>
                        <td data-label="ID" class="has-text-right"><span><span></span></span>
                        </td>
                        <td data-label="Label"><span><span></span></span>
                        </td>
                        <td data-label="Boolean"><span><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true"> <span class="check"></span> <span class="control-label"></span></label>
                            </span>
                        </td>
                        <td data-label="State"><span><span> --- </span></span>
                        </td>
                    </tr>
                </tbody>
            </table>
        </div>
        <div class="level">
            <div class="level-left">
                <!---->
            </div>
            <div class="level-right">
                <div class="level-item">
                    <div class="pagination"><a class="pagination-previous is-disabled"><span class="icon"><i class="fa fa-angle-left"></i></span></a> <a class="pagination-next is-disabled"><span class="icon"><i class="fa fa-angle-right"></i></span></a>
                        <ul class="pagination-list">
                            <!---->
                            <!---->
                            <li><a class="pagination-link is-current">
                1
            </a></li>
                            <!---->
                            <!---->
                        </ul>
                        <!---->
                    </div>
                </div>
            </div>
        </div>
    </div>
</div>
`;

exports[`furet-ui-x2m-list-view component Render without data 1 1`] = `
<div data-server-rendered="true">
    <nav class="level">
        <div class="level-left">
            <div class="field has-addons">
                <p class="control"><a class="button"><span class="icon is-small"><i class="fa fa-plus"></i></span> <span>Create</span></a></p>
                <!---->
            </div>
        </div>
        <div class="level-right">
            <!---->
        </div>
    </nav>
    <div class="b-table">
        <!---->
        <div class="table-wrapper">
            <table class="table is-narrow has-mobile-cards">
                <thead>
                    <tr>
                        <th class="checkbox-cell"><label tabindex="0" class="checkbox"><input type="checkbox" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label"></span></label></th>
                    </tr>
                </thead>
                <tbody>
                    <tr class="is-empty">
                        <td colspan="1"></td>
                    </tr>
                </tbody>
            </table>
        </div>
        <div class="level">
            <div class="level-left">
                <!---->
            </div>
            <div class="level-right">
                <div class="level-item">
                    <div class="pagination"><a class="pagination-previous is-disabled"><span class="icon"><i class="fa fa-angle-left"></i></span></a> <a class="pagination-next is-disabled"><span class="icon"><i class="fa fa-angle-right"></i></span></a>
                        <ul class="pagination-list">
                            <!---->
                            <!---->
                            <!---->
                            <!---->
                        </ul>
                        <!---->
                    </div>
                </div>
            </div>
        </div>
    </div>
</div>
`;

exports[`furet-ui-x2m-list-view component Render without data 2 1`] = `
<div data-server-rendered="true">
    <nav class="level">
        <div class="level-left">
            <div class="field has-addons">
                <p class="control"><a class="button"><span class="icon is-small"><i class="fa fa-plus"></i></span> <span>Create</span></a></p>
                <!---->
            </div>
        </div>
        <div class="level-right">
            <div class="field has-addons">
                <p class="control"><span class="tooltip is-info is-left is-medium"><a class="button"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
                <p class="control"><span class="tooltip is-info is-left is-medium"><a class="button"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
                <!---->
                <p class="control"><span class="tooltip is-info is-left is-medium"><a class="button"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
            </div>
        </div>
    </nav>
    <div class="b-table">
        <!---->
        <div class="table-wrapper">
            <table class="table is-narrow has-mobile-cards">
                <thead>
                    <tr>
                        <th class="checkbox-cell"><label tabindex="0" class="checkbox"><input type="checkbox" true-value="true"> <span class="check"></span> <span class="control-label"></span></label></th>
                    </tr>
                </thead>
                <tbody>
                    <tr>
                        <td class="checkbox-cell"><label tabindex="0" class="checkbox"><input type="checkbox" true-value="true"> <span class="check"></span> <span class="control-label"></span></label></td>
                        <td data-label="ID" class="has-text-right"><span><span></span></span>
                        </td>
                        <td data-label="Label"><span><span></span></span>
                        </td>
                        <td data-label="Boolean"><span><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true"> <span class="check"></span> <span class="control-label"></span></label>
                            </span>
                        </td>
                        <td data-label="State"><span><span> --- </span></span>
                        </td>
                    </tr>
                    <tr>
                        <td class="checkbox-cell"><label tabindex="0" class="checkbox"><input type="checkbox" true-value="true"> <span class="check"></span> <span class="control-label"></span></label></td>
                        <td data-label="ID" class="has-text-right"><span><span></span></span>
                        </td>
                        <td data-label="Label"><span><span></span></span>
                        </td>
                        <td data-label="Boolean"><span><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true"> <span class="check"></span> <span class="control-label"></span></label>
                            </span>
                        </td>
                        <td data-label="State"><span><span> --- </span></span>
                        </td>
                    </tr>
                    <tr>
                        <td class="checkbox-cell"><label tabindex="0" class="checkbox"><input type="checkbox" true-value="true"> <span class="check"></span> <span class="control-label"></span></label></td>
                        <td data-label="ID" class="has-text-right"><span><span></span></span>
                        </td>
                        <td data-label="Label"><span><span></span></span>
                        </td>
                        <td data-label="Boolean"><span><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true"> <span class="check"></span> <span class="control-label"></span></label>
                            </span>
                        </td>
                        <td data-label="State"><span><span> --- </span></span>
                        </td>
                    </tr>
                </tbody>
            </table>
        </div>
        <div class="level">
            <div class="level-left">
                <!---->
            </div>
            <div class="level-right">
                <div class="level-item">
                    <div class="pagination"><a class="pagination-previous is-disabled"><span class="icon"><i class="fa fa-angle-left"></i></span></a> <a class="pagination-next is-disabled"><span class="icon"><i class="fa fa-angle-right"></i></span></a>
                        <ul class="pagination-list">
                            <!---->
                            <!---->
                            <li><a class="pagination-link is-current">
                1
            </a></li>
                            <!---->
                            <!---->
                        </ul>
                        <!---->
                    </div>
                </div>
            </div>
        </div>
    </div>
</div>
`;
